--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "httpx>=0.27.0",
     "pydantic>=2.7",
     "typing-extensions>=4.5.0",
+    "PyYAML>=6.0.1",
 ]
 
 [project.optional-dependencies]
